K8s/producer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: producer-ingress
  namespace: kafka
  annotations:
    konghq.com/plugins: jwt-auth  #ABILITA AUTENTICAZIONE CON JWT
    #konghq.com/strip-path: "true"
spec:
  ingressClassName: kong  
  rules:
  - host: producer.192.168.58.2.nip.io
    http:
      paths:
        - path: /event
          pathType: Prefix
          backend:
            service:
              name: producer-service
              port:
                number: 5000
